<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="chiudi">Chiudi</string>
    <string name="caricamento">Attendere, caricamento in corso...</string>
    <string name="spinnerLayout">Menu a discesa</string>
    <string name="autoCompleteLayout">Auto Completamento</string>
    <string name="search">Cerca</string>
    <string name="update">Aggiorna</string>
    <string name="uploadStations">Aggiorna le stazioni</string>
    <string name="settings">Impostazioni</string>
    <string name="hello">Benvenuto Vesuviana for Android</string>
    <string name="app_name">DroidVesuviana</string>
    <string name="partenza">Stazione di partenza</string>
    <string name="arrivo">Stazione di arrivo</string>
    <string name="avvisoNoConnection">Attenzione! Non è presente alcuna connessione, i dati potrebbero essere non aggiornati.</string>
    <string name="dbException">Database exeption: </string>
    <string name="connException">Attenzione! Non è presente alcuna connessione, i dati potrebbero essere non aggiornati.</string>
    <string name="titolo">CircumVesuviana</string>
</resources>