<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:layout_width="fill_parent" android:text="@string/hello"
		android:id="@+id/TextView03" android:layout_height="wrap_content"
		android:textStyle="bold" android:layout_x="0dip" android:layout_y="0dip"></TextView>
	<AutoCompleteTextView android:layout_height="wrap_content"
		android:layout_x="8dip" android:layout_y="25dip" android:text="@string/partenza"
		android:layout_width="300dip" android:id="@+id/partenza"></AutoCompleteTextView>
	<AutoCompleteTextView android:layout_x="8dip"
		android:id="@+id/arrivo" android:layout_height="wrap_content"
		android:layout_y="85dip" android:text="@string/arrivo"
		android:layout_width="300dip"></AutoCompleteTextView>
	<DatePicker android:layout_width="wrap_content" android:id="@+id/data"
		android:layout_height="wrap_content" android:layout_x="8dip" android:layout_y="160dip"></DatePicker>
	<TimePicker android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/orario"
		android:layout_x="8dip" android:layout_y="300dip"></TimePicker>
	<Button android:id="@+id/cerca" android:layout_width="wrap_content"
		android:text="@string/search" android:layout_height="wrap_content"
		android:layout_x="251dip" android:layout_y="369dip" android:onClick="cerca"></Button>
</AbsoluteLayout>
