<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:layout_width="fill_parent" android:text="@string/hello"
		android:id="@+id/TextView03" android:layout_height="wrap_content"
		android:textStyle="bold" android:layout_x="0dip" android:layout_y="0dip"></TextView>
	<TextView android:layout_width="wrap_content" android:text="@string/partenza"
		android:id="@+id/TextView02" android:layout_height="wrap_content"
		android:layout_x="6dip" android:layout_y="20dip"></TextView>
	<Spinner android:id="@+id/partenza"
		android:layout_height="wrap_content" android:layout_x="8dip"
		android:layout_y="40dip" android:layout_width="300dip"></Spinner>
	<TextView android:layout_width="wrap_content" android:text="@string/arrivo"
		android:id="@+id/TextView01" android:layout_height="wrap_content"
		android:layout_x="6dip" android:layout_y="90dip"></TextView>
	<Spinner android:id="@+id/arrivo"
		android:layout_height="wrap_content" android:layout_x="8dip"
		android:layout_y="110dip" android:layout_width="300dip"></Spinner>
	<Button android:id="@+id/cerca" android:layout_width="wrap_content"
		android:text="@string/search" android:layout_height="wrap_content"
		android:layout_x="251dip" android:layout_y="369dip" android:onClick="cerca"></Button>
	<TimePicker android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/orario"
		android:layout_x="8dip" android:layout_y="290dip"></TimePicker>
	<DatePicker android:layout_width="wrap_content" android:id="@+id/data"
		android:layout_height="wrap_content" android:layout_x="8dip"
		android:layout_y="160dip"></DatePicker>
</AbsoluteLayout>
